--- a/lib/course_catalog_web/templates/course/index.html.eex
+++ b/lib/course_catalog_web/templates/course/index.html.eex
@@ -1,34 +1,30 @@
 <h2>Listing Courses</h2>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Term</th>
-      <th>Code</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Credits</th>
+  <div class="row">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Code</th>
+          <th>Name</th>
+          <th>Description</th>
 
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for course <- @courses do %>
-    <tr>
-      <td><%= course.term %></td>
-      <td><%= course.code %></td>
-      <td><%= course.name %></td>
-      <td><%= course.description %></td>
-      <td><%= course.credits %></td>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+    <%= for course <- @courses do %>
+        <tr>
+          <td><%= course.code %></td>
+          <td><%= course.name %></td>
+          <td><%= course.description %></td>
 
-      <td class="text-right">
-        <span><%= link "Show", to: course_path(@conn, :show, course), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Edit", to: course_path(@conn, :edit, course), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Delete", to: course_path(@conn, :delete, course), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
-
-<span><%= link "New Course", to: course_path(@conn, :new) %></span>
+          <td class="text-right">
+            <span><%= link "Show", to: course_path(@conn, :show, course), class: "btn btn-default btn-xs" %></span>
+            <span><%= link "Edit", to: course_path(@conn, :edit, course), class: "btn btn-default btn-xs" %></span>
+            <span><%= link "Delete", to: course_path(@conn, :delete, course), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
+          </td>
+        </tr>
+    <% end %>
+      </tbody>
+    </table>
+  </div>
